# wrenfold

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  environment.yml  linux-environment.yml  mac-environment.yml  pixi.toml  problem_summary.md  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  test-environment.yml  windows-environment.yml
benchmarks/: CMakeLists.txt  bench_add_mul.cc
components/: CMakeLists.txt
components/cmake/: functions.cmake
components/core/: CMakeLists.txt
components/core/benchmarks/: CMakeLists.txt  bench_add_mul.cc  bench_code_generation.cc  bench_distribute.cc  bench_factorizer.cc  bench_formatter.cc  bench_ir.cc  bench_jacobian.cc  bench_power.cc
components/core/test_support/: CMakeLists.txt  custom_main.cc
components/core/tests/: CMakeLists.txt  algorithm_utils_test.cc  bitset_range_test.cc  checked_int_test.cc  checked_pointers_test.cc  compound_expressions_test.cc  cpp_generation_gen.cc  cpp_generation_test.cc  cpp_generation_test_2.cc  cpp_generation_test_numeric_types.h  cse_visitor_test.cc  custom_pointers_test.cc  derivatives_test.cc  factorizer_test.cc  functions_test.cc  generation_diff_test.py  generation_test_2.py  integer_utils_test.cc  ir_builder_test.cc  ir_conversion_test.cc  limits_test.cc  matrix_operations_test.cc  numeric_expressions_test.cc  plain_formatter_test.cc  quaternion_test.cc  rust_generation_gen.cc  scalar_operations_test.cc  stack_allocator_test.cc  static_vector_test.cc  string_utils_test.cc  substitute_test.cc  test_expressions.h  test_expressions_codegen.h  tree_formatter_test.cc  type_list_test.cc
components/core/wf/: absl_imports.h  algorithm_utils.h  any_expression.h  assertions.h  boolean_expression.cc  boolean_expression.h  checked_int.h  checked_pointers.h  collect.cc  collect.h  common_visitors.h  compound_expression.cc  compound_expression.h  constants.cc  constants.h  cse.cc  cse.h  derivative.cc  derivative.h  distribute.cc  distribute.h  enumerations.h  error_types.h  evaluate.cc  evaluate.h  expression.cc  expression.h  expression_cache.h  expression_concept.h  expression_impl.h  expression_iteration.h  expression_variant.h  expression_visitor.h  external_function.cc  external_function.h  function_evaluator.h  function_evaluator_detail.h  functions.cc  functions.h  hashing.h  (+38 more)
components/math/: CMakeLists.txt
components/math/benchmarks/: CMakeLists.txt  bench_ir.cc  bench_jacobian.cc
components/math/examples/: CMakeLists.txt
components/math/include/: absl_imports.h  assertions.h  common_visitors.h  constants.h  derivative.h  enumerations.h  error_types.h  evaluate.h  expression.h  expression_concept.h  expression_impl.h  fmt_imports.h  function_evaluator.h  function_evaluator_detail.h  functions.h  hashing.h  index_range.h  integer_utils.h  matrix_expression.h  matrix_functions.h  non_null_ptr.h  operations.h  output_annotations.h  plain_formatter.h  substitute.h  template_utils.h  type_annotations.h  (+2 more)
components/python/: CMakeLists.txt
components/runtime/: CMakeLists.txt  span.h  span_detail.h  span_eigen.h
components/sym_wrapper/: CMakeLists.txt  codegen_wrapper.cc  expression_wrapper.cc  geometry_wrapper.cc  matrix_wrapper.cc  wrapper_utils.h
components/wrapper/: CMakeLists.txt
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  shared_expressions.py
examples/bspline/: CMakeLists.txt  README.md  bspline.py  bspline_numerical.h  bspline_test.cc
examples/c_generation/: CMakeLists.txt  README.md  c_code_generator.py  c_generation.c  c_generation.py  c_generation_test.cc  c_span_types.h
examples/cart_pole/: CMakeLists.txt  README.md  cart_pole_dynamics.py  cart_pole_test.py  sympy_helpers.py
examples/ceres_simple_bundle_adjuster/: CMakeLists.txt  README.md  simple_bundle_adjuster.cc  snavely_reprojection_error.py
examples/custom_types/: CMakeLists.txt  custom_types_1_test.cc  custom_types_gen.py  custom_types_test.cc
examples/gtsam_bal/: CMakeLists.txt  README.md  bundle_adjustment_factor.py  gtsam_bal.cc  pose3.py
examples/imu_integration/: CMakeLists.txt  imu_integration.py  imu_integration_test.cc  py_imu_integration_test.cc
examples/jax_camera_model/: CMakeLists.txt  README.md  jax_camera_model.py
examples/jax_photometric_alignment/: CMakeLists.txt  README.md  jax_photometric_alignment.py  utils.py
examples/lookup_table/: CMakeLists.txt  lookup_table_gen.py  lookup_table_test.cc
examples/motion_planning/: CMakeLists.txt  problem.py
examples/pyceres_examples/: curve_fitting.ipynb  simple_bundle_adjuster.ipynb
examples/python_generation/: CMakeLists.txt  README.md  python_generation.py
examples/quaternion_interpolation/: CMakeLists.txt  quat_interpolation_expressions.h  quat_interpolation_gen.cc  quat_interpolation_test.cc  quaternion_interpolation.py
examples/rosenbrock/: CMakeLists.txt  rosenbrock.py  rosenbrock_test.cc
examples/rotation_error/: CMakeLists.txt  output.py  rotation_error.py  rotation_error2.py  rotation_error_test.cc
runtime/: CMakeLists.txt  span.h  span_detail.h  span_eigen.h
test/: CMakeLists.txt  code_gen_helpers.h  code_generation_test.cc  cpp_generation_gen.cc  cpp_generation_test.cc  derivatives_test.cc  eigen_test_helpers.h  expressions_test.cc  formatting_test.cc  functions_test.cc  integer_factorization_test.cc  integer_utils_test.cc  ir_builder_test.cc  matrix_operations_test.cc  numeric_expressions_test.cc  numeric_testing.h  owning_ptr_test.cc  plain_formatter_test.cc  quaternion_test.cc  rust_generation_gen.cc  scalar_derivatives_test.cc  scalar_operations_test.cc  span_test.cc  substitute_test.cc  test_expressions.h  test_helpers.cc  test_helpers.h
test/config/: config_variables.h.in
test/rust_tests/: Cargo.toml
wrapper/: CMakeLists.txt  codegen_wrapper.cc  expression_wrapper.cc  matrix_wrapper.cc  wrapper.cc
wrapper/python_test/: CMakeLists.txt  codegen_wrapper_test.py  expression_wrapper_test.py  matrix_wrapper_test.py  test_base.py  test_wrapper.py
(+612 files in other folders)
