[workspace]
resolver = "2"
package.version = "0.2.2"
package.license = "MIT"
package.edition = "2021"
package.authors = ["Gareth <gcross.code@icloud.com>"]
members = [
    "components/core/tests/rust_generation_test_2",
    "components/core/tests/rust_generation_test",
    "components/rust/wrenfold-test-utils",
    "components/rust/wrenfold-traits",
    "examples/bspline/bspline_demo",
    "examples/bspline/bspline_rust_test",
    "examples/cart_pole/cart_pole_demo",
    "examples/custom_types/custom_types_rust_test",
    "examples/motion_planning/motion_planning_test",
]

[workspace.dependencies]
wrenfold-test-utils = { path = "components/rust/wrenfold-test-utils"  }
wrenfold-traits = { path = "components/rust/wrenfold-traits", version = "0.1.0", features = ["nalgebra"] }
bspline_rust_test = { path = "examples/bspline/bspline_rust_test" }

# External crates used for tests.
nalgebra = { version = "0.33" }
approx = { version = "0.5.1" }
serde = { version = "1.0" }
pkg-config = { version = "0.3.29" }

# External crates used for demo apps:
arrayvec = { version = "0.7.6 "}
colorgrad = { version = "0.6.2", default-features = false  }
eframe = { version = "0.29.1", default-features = false }
egui = { version = "0.29.1", features = [
  "callstack",
  "default",
  "log",
] }
egui_extras = { version = "0.29.0", features = ["default", "image"] }
egui_plot = { version = "0.29.0", features = ["default"] }
emath = { version = "0.29.1" }
log = { version = "0.4", features = ["std"] }
rand = { version = "0.8.5", features = ["std"] }
