[project]
name = "wrenfold"
version = "0.4.1"
requires-python = ">=3.10"
authors = [{ name = "Gareth Cross", email = "gcross.code@icloud.com" }]
description = "Tools for code-generating mathematical functions."
license = { text = "MIT" }
readme = "docs/PACKAGE_README.md"
keywords = ["symbolic", "math", "code-generation", "robotics", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Code Generators",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://wrenfold.org"
Repository = "https://github.com/wrenfold/wrenfold/"
Issues = "https://github.com/wrenfold/wrenfold/issues"

[build-system]
requires = ["scikit-build-core==0.11.6", "cmake>=3.21", "ninja>=1.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.21"
# It seems like setting `build-type` is insufficient on Windows, and we fall back to Debug.
# Place it in the `args` list to force a release build.
cmake.args = ["-G", "Ninja", "-Wno-deprecated", "-DCMAKE_BUILD_TYPE=Release"]
cmake.build-type = "Release"
ninja.version = ">=1.5"
ninja.make-fallback = false
logging.level = "INFO"
wheel.packages = ["components/python/wrenfold"]
wheel.license-files = [
    "LICENSE",
    "dependencies/abseil-cpp/LICENSE",
    "dependencies/fmt/LICENSE",
    "dependencies/nanobind/LICENSE",
]
build.verbose = true

[tool.cibuildwheel]
skip = ["*musllinux_*", "*-win32", "*_i686", "pp*"]
manylinux-x86_64-image = "manylinux_2_28"
test-command = ["python \"{package}/support/test_wheel.py\""]
# To test interop, we need NumPy, SymPy and JAX.
test-requires = ["numpy", "sympy", "jax", "numba"]

# Dev dependencies for UV:
# We are stuck on an older sphinx until breathe resolves compatibility issues.
# Such as: https://github.com/sphinx-doc/sphinx/issues/11490
[dependency-groups]
dev = [
    "breathe==4.35.0",
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "pre-commit>=4.2.0",
    "sphinx==6.2.1",
]
test = ["jax>=0.4.30", "numpy>=2.0.2", "sympy>=1.14.0", "numba>=0.63"]
torch = ["torch>=2.8"]
ipdb = ["ipdb"]

[tool.uv]
package = false # Do not install wheel when running `uv add`, etc.

[tool.ruff]
exclude = ["components/wrapper/stubs"]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E731", # Use def instead of lambda.
]
