[project]
name = "wrenfold"
version = "0.5.1"
requires-python = ">=3.10"
authors = [{ name = "Gareth Cross", email = "gcross.code@icloud.com" }]
description = "Tools for code-generating mathematical functions."
license = { text = "MIT" }
readme = "docs/PACKAGE_README.md"
keywords = ["symbolic", "math", "code-generation", "robotics", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Code Generators",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://wrenfold.org"
Repository = "https://github.com/wrenfold/wrenfold/"
Issues = "https://github.com/wrenfold/wrenfold/issues"

[build-system]
requires = ["scikit-build-core==0.11.6", "cmake>=3.21", "ninja>=1.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.21"
# It seems like setting `build-type` is insufficient on Windows, and we fall back to Debug.
# Place it in the `args` list to force a release build.
cmake.args = ["-G", "Ninja", "-Wno-deprecated", "-DCMAKE_BUILD_TYPE=Release"]
cmake.build-type = "Release"
ninja.version = ">=1.5"
ninja.make-fallback = false
logging.level = "INFO"
wheel.packages = ["components/python/wrenfold"]
wheel.license-files = [
    "LICENSE",
    "dependencies/abseil-cpp/LICENSE",
    "dependencies/eigen/LICENSE",
    "dependencies/fmt/LICENSE",
    "dependencies/nanobind/LICENSE",
]
build.verbose = true

[tool.cibuildwheel]
skip = ["*musllinux_*", "*-win32", "*_i686", "pp*"]
manylinux-x86_64-image = "manylinux_2_28"
test-command = ["python \"{package}/support/test_wheel.py\""]
test-requires = ["numpy", "sympy", "jax"]

[dependency-groups]
dev = [
    "breathe==4.35.0",
    "furo==2025.12.19",
    "myst-parser==4.0.1",
    "pre-commit>=4.2.0",
    "sphinx==8.1.3",
]
test = [
    # Do not test jax on 3.14, since scipy has to be built from source for free-threaded python.
    "jax>=0.6.2; python_version < '3.14'",
    "numpy>=2.0.2",
    "sympy>=1.14.0",
    "numba>=0.63",
]
torch = ["torch>=2.8"]
ipdb = ["ipdb"]

[tool.uv]
package = false # Do not install wheel when running `uv add`, etc.

[tool.ruff]
exclude = ["components/wrapper/stubs"]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E731", # Use def instead of lambda.
]
